<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonSwitchCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_switch_camera" />

        <Spinner
            android:id="@+id/spinnerCPUGPU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true" />

        <Button
            android:id="@+id/buttonMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_menu" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editPrompt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_prompt"
            android:text="@string/default_prompt"
            android:inputType="text" />

        <Button
            android:id="@+id/buttonApplyPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_apply_prompt" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkUseServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/check_use_server" />

        <EditText
            android:id="@+id/editServer"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_server"
            android:text="@string/default_server"
            android:inputType="textUri" />
    </LinearLayout>

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_init"
        android:textSize="12sp"
        android:padding="4dp" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <SurfaceView
            android:id="@+id/cameraview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <ncnn.yoloworld.demo.YoloOverlayView
            android:id="@+id/overlay"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="false"
            android:focusable="false" />
    </FrameLayout>

</LinearLayout>
